# blockchain-job-board-contract

./: README.md
contracts/job_board/: Cargo.toml
contracts/job_board/src/: contract.rs  test.rs
contracts/job_board/test_snapshots/test/: burn_fails_when_paused.1.json  burn_works.1.json  initial_state.1.json  mint_fails_when_paused.1.json  mint_works.1.json  transfer_fails_when_paused.1.json  transfer_from_fails_when_paused.1.json  transfer_from_works.1.json  transfer_works.1.json
